# ai-cache-cleaner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cleaner.rs  cli.rs  display.rs  error.rs  locations.rs  main.rs  scanner.rs
