[package]
name = "ai-cache-cleaner"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A blazing fast CLI tool to clean up AI cache, weights, and logs (HuggingFace, Ollama, PyTorch, Pip, Cursor)"
license = "MIT"
repository = "https://github.com/yourusername/ai-cache-cleaner"
keywords = ["ai", "cache", "cleaner", "cli", "utility"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
colored = "2.0"
dialoguer = "0.11"
serde_json = "1.0"
dirs = "5.0"

